--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "rxjs": "^5.2.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
